# UXO_v1

./: .env.example  .gitignore  AGENTS.md  CMakeLists.txt  PROJECT_STRUCTURE.md  README.md  SDD排弹抢修指挥系统_v1.0.md  SRS排弹抢修指挥系统_v1.0.md  opencode.json  排弹抢修系统指挥席客户端 软件前端UI详细设计说明书.txt  排弹方案0919.docx  界面设计.docx
.omo/plans/: 20260707-mvp-command-seat.md  20260709-work-session.md  README.md
.omo/rules/: documentation-truth.md  project-safety.md
.omo/templates/: mvp-plan-template.md
.opencode/: opencode.db-shm  opencode.db-wal
.opencode/commands/: analyze-current.md  plan-mvp.md  review-safety.md  verify-build.md
.workbuddy/memory/: 2026-06-24.md  2026-06-25.md  2026-06-26.md  2026-06-30.md  2026-07-01.md  MEMORY.md
config/: devices.json  system.json
docs/: OMO_ADAPTATION_PLAN.md  前端UI详细设计文档.md  排弹抢修系统_产品形态设计说明书_v1.0.md  排弹抢修系统_硬件功能设计说明书_v2.2.md  未爆弹排除技术详细调研报告_v2.0.md  硬件设备技术规格说明书_v1.0.md
docs/ddr/: DDR-001-项目现状评审结论.md  DDR-002-硬件缺位下开发策略.md  DDR-003-Phase1执行计划.md  DDR-004-多Agent并行架构调整.md  DDR-005-DDR004二次验证与修正.md  DDR-006-产品视角架构评估.md  DDR-007-代码架构之道.md  DDR-008-当量识别技术可行性评估.md  README.md
docs/dev/: architecture-boundaries.md  build-and-run.md  current-state.md  mvp-scope.md  simulation-policy.md
docs/dev/decisions/: 0001-opencode-omo-workflow.md
include/App/: Application.h
include/Common/: GlobalStyle.h  MockDataGenerator.h
include/Core/3D/: AirportSceneFactory.h
include/Core/Data/: AirportData.h  Types.h
include/Core/Simulation/: DemoScenarioProvider.h
include/MainWindow/: AlertPanel.h  BatchOperationBar.h  DecisionSuggestionPanel.h  DecisionView.h  DetectionControlPanel.h  DeviceControlView.h  DeviceStatusPanel.h  LeftPanelWidget.h  MainWindow.h  NavigationWidget.h  RightPanelWidget.h  SituationView.h  StatusBarWidget.h  TargetDetailPanel.h  VideoStreamPanel.h
scripts/: build.sh  install_qt_ubuntu.sh
src/: README.md
src/App/: Application.cpp  CMakeLists.txt  main.cpp
src/Common/: CMakeLists.txt  GlobalStyle.cpp  MockDataGenerator.cpp  README.md
src/Core/: AirportData.cpp  CMakeLists.txt  README.md
src/Core/3D/: AirportSceneFactory.cpp
src/Core/Simulation/: DemoScenarioProvider.cpp
src/MainWindow/: AlertPanel.cpp  BatchOperationBar.cpp  CMakeLists.txt  DecisionSuggestionPanel.cpp  DecisionView.cpp  DetectionControlPanel.cpp  DeviceControlView.cpp  DeviceStatusPanel.cpp  LeftPanelWidget.cpp  MainWindow.cpp  NavigationWidget.cpp  RightPanelWidget.cpp  SituationView.cpp  StatusBarWidget.cpp  TargetDetailPanel.cpp  VideoStreamPanel.cpp
src/Modules/: README.md
tests/: demo_scenario_provider_test.cpp  startup_visible_test.cpp
